# learn-python-PIAIC

./: README.md  class1.ipynb  class1.py  class2.py  class3.ipynb  class3.py  class4.ipynb  string.py  sum_two_numbers.py  type_conversion.py  user_input.py  variables.py
face-recognition-based-attendance-system-master/: app.py
fast-api/: pyproject.toml
fast-api/todos/: main.py
studentdata/: pyproject.toml
studentdata/studentdata/: main.py
weather-desktop-notifications/: pyproject.toml
weather-desktop-notifications/weather_desktop_notifications/: main.py
