[tool.poetry]
name = "studentdata"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"

[tool.poetry.scripts]
dev= "studentdata.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
